--- a/countries.client/src/style.scss
+++ b/countries.client/src/style.scss
@@ -1,3 +1,12 @@
+:root {
+  --dark-blue: hsl(209, 23%, 22%);
+  --very-dark-blue: hsl(207, 26%, 17%);
+
+  --very-dark-blue-light: hsl(200, 15%, 8%);
+  --dark-gray: hsl(0, 0%, 52%);
+  --light-gray: hsl(0, 0%, 98%);
+}
+
 body {
   min-height: 100vh;
   margin: 0;
