Add loading Screen + page + page size + styling

--- a/countries.client/src/style.scss
+++ b/countries.client/src/style.scss
@@ -27,6 +27,7 @@ body {
   display: flex;
   justify-content: center;
   transition: 0.3s;
+  background-color: var(--main-bg);
 
   #app {
     flex-grow: 1;
